# evolutionSimulation

./: .gitignore  CMakeLists.txt  README.md  environment.yml  notes.txt  pyproject.toml  requirements.txt
evolutionSimulation/c++/animals/: create.cpp
evolutionSimulation/c++/nn/: pytorch.cpp
evolutionSimulation/evolution/brain/: evolve.py
evolutionSimulation/evolutionTypeShit/: testEvolve.py
evolutionSimulation/modelWeights/100/: model0.pt  model1.pt  model2.pt
evolutionSimulation/modelWeights/1000/: model0.pt  model2.pt
evolutionSimulation/modelWeights/10000/: model0.pt
evolutionSimulation/modelWeights/3000/: model0.pt  model1.pt
evolutionSimulation/modelWeights/5000/: model1.pt
evolutionSimulation/python/animals/: create.py
evolutionSimulation/python/dataset/: create_dataset.py  test.ipynb
evolutionSimulation/python/dataset/scripts/: create_dataset.py  image.py  view.ipynb
evolutionSimulation/python/eval/: accuracy.py  compute.py  demonstrate.ipynb
evolutionSimulation/python/game/: animals.py
evolutionSimulation/python/neuralnetworks/: ViT.py  explore.py  explore_nn.py  model_param.ipynb  nn.py  params.py  similarity.ipynb  similarity.py
evolutionSimulation/python/test/: accuracy.py  test.ipynb
evolutionSimulation/python/train/: test.ipynb  train.ipynb  train.py  train_script.py  training.py
evolutionSimulation/scripts/: params.py  speed.py  timer.py
evolutionSimulation/speedtest/: speed.py
evolutionSimulation/weights/evolvedWeights/img200/: generation100sheep2.pt  (+2 more)
src/python/neuralnetworks/: mnist.py  test.ipynb
(+51 files in other folders)
